test/compile_error/lengthmismatch.conf.def
config length_mismatch_conf {
    optional vector_val : list[3]<bool> = { true, true };
}
